<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cocktail Mixxer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_cocktails">MainActivity</string>
    <string name="button_CocktailListe">Cocktail Liste</string>
    <string name="button_Verbinden">Verbinden</string>
    <string name="button_NeuerCocktail">Neuer Cocktail</string>
    <string name="button_Einstellungen">Einstellungen</string>
    <string name="button_Admin">Admin</string>
    <string name="butteon_Search">Search</string>
    <string name="Settings_btnBluetooth">Bluetooth</string>
    <string name="button_Bluetooth">Bluetooth</string>
    <string name="bluetooth_textviewDevices">Gefundene Geräte:</string>
    <string name="bluetooth_textviewPreFoundDevices">Frühere Geräte</string>
    <string name="not_connected">BluetoothVerbindung unterbrochen</string>
    <string name="hello">Hello World, ImageTextListViewActivity!</string>
    <string name="name">ListViewBaseAdapter</string>
    <string name="image">Thumbnail</string>
    <string name="button_User">Benutzer</string>
    <string name="button_save">Speichern</string>
    <string name="button_MakeNew">Neu Anlegen</string>
    <string name="button_delete">Löschen</string>
    <string name="button_edit">Bearbeiten</string>
    <string name="button_show">Anzeigen</string>
    <string name="title_activity_add_user">AddUserActivity</string>
    <string name="AddUser">Neuen Benutzer hinzufügen</string>
    <string name="button_addUser">Neuer Benutzer</string>
    <string name="title_activity_activity_cocktail">ActivityCocktail</string>
    <string name="button_order">Bestellen</string>
    <string name="button_newSaft">Neuer Saft</string>
    <string name="title_activity_activity_saft_list">ActivitySaftList</string>
    <string name="list_heading">CocktailList</string>
    <string name="title_activity_new_saft">NewSaft</string>
    <string name="button_back">Zurück</string>
    <string name="title_activity_add_saft">AddSaft</string>
    <string name="newsaft_Saftmenge">Saftmenge wählen</string>
    <string name="MlLeft">Verfügbare Menge:</string>
    <string name="mlAct">Aktuelle Menge:</string>
    <string name="MlLeftValue">500</string>
    <string name="scanning">scanning for devices...</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="select_device">Gerät auswählen</string>

</resources>