<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundmixxer"
    android:gravity="right"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/list_textView"
        style="@style/MenuText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/main_btnCocktails"
        style="@style/Buttonstyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/main_btnNewCocktail"
        android:layout_below="@+id/main_btnNewCocktail"
        android:text="@string/button_CocktailListe" />

    <Button
        android:id="@+id/main_btnConnect"
        style="@style/Buttonstyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/main_btnCocktails"
        android:text="@string/button_Verbinden"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/main_btnNewCocktail"
        style="@style/Buttonstyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/main_btnConnect"
        android:layout_below="@+id/list_textView"
        android:layout_marginTop="44dp"
        android:text="@string/button_NeuerCocktail" />

    <Button
        android:id="@+id/btn_User"
        style="@style/Buttonstyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/main_btnConnect"
        android:layout_below="@+id/main_btnConnect"
        android:text="@string/button_User" />

    <Spinner
        android:id="@+id/main_spinnerUsers"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_User"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" />

</RelativeLayout>