<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_column="0"
    android:layout_gravity="left|top" 
    >

    <TextView
        android:id="@+id/list_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_NeuerCocktail"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="436dp"
        android:layout_above="@+id/newCocktail_btnBestellen"
        android:layout_below="@+id/list_textView" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/addSaft_textViewMlActual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@color/White"
                    android:contentDescription="@string/image"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:src="@drawable/cocktail_icon_lol" />

                <ScrollView
                    android:id="@+id/scrollView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical" >

                        <EditText
                            android:id="@+id/newCocktail_editTextName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="Name" >
                        </EditText>

                        <EditText
                            android:id="@+id/newCocktail_editTextDesc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="5.03"
                            android:ems="10"
                            android:hint="Beschreibung"
                            android:inputType="textMultiLine" />
                    </LinearLayout>
                </ScrollView>

            </LinearLayout>

            <Button
                android:id="@+id/newCocktail_btnNewSaft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="newCocktail_OnClick_newSaft"
                android:text="@string/button_newSaft" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10.59" >

                <ListView
                    android:id="@+id/newCocktail_listSaefte"
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:layout_weight="7.35" >
                </ListView>
            </FrameLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/newCocktail_btnBestellen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/button_MakeNew"
        android:onClick="newcocktails_onClickOrder" />

</RelativeLayout>