<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/bluetooth_title"
        style="@style/MenuText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/button_User"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/user_SpinnerUsers"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/bluetooth_title" />

    <TextView
        android:id="@+id/newcocktail_textView_menge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/user_SpinnerUsers"
        android:text="Getrunkene Cocktails"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <Button
            android:id="@+id/btn_newuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.18"
            android:onClick="addUser"
            android:text="@string/button_addUser" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.51"
            android:text="@string/button_delete"
            android:onClick="deleteUser" />
    </LinearLayout>

    <TextView
        android:id="@+id/user_fahren"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_alignParentLeft="true"
        android:text="Fahrtüchtig in:"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/user_promille"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/user_fahren"
        android:layout_alignParentLeft="true"
        android:text="Aktueller Promillewert:"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/newCocktail_listSäfte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/user_promille"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/newcocktail_textView_menge" >

    </ListView>

</RelativeLayout>